--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^4.22.4",
+    "antd-img-crop": "^4.2.4",
     "craco-less": "^2.0.0",
     "date-fns": "^2.29.1",
     "goodvandro-alganews-sdk": "^3.0.0",
