--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "craco-less": "^2.0.0",
     "date-fns": "^2.29.1",
     "goodvandro-alganews-sdk": "^3.2.2",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "@types/react-router-dom": "^5.3.3"
   }
 }
