--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "0.21.1",
     "craco-less": "^2.0.0",
     "date-fns": "^2.29.1",
-    "goodvandro-alganews-sdk": "^6.0.0",
+    "goodvandro-alganews-sdk": "6.2.0",
     "jwt-decode": "^3.1.2",
     "lodash.debounce": "^4.0.8",
     "pkce-challenge": "^3.0.0",
