--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "0.21.1",
     "craco-less": "^2.0.0",
     "date-fns": "^2.29.1",
-    "goodvandro-alganews-sdk": "6.2.0",
+    "goodvandro-alganews-sdk": "6.2.1",
     "jwt-decode": "^3.1.2",
     "lodash.debounce": "^4.0.8",
     "pkce-challenge": "^3.0.0",
@@ -30,10 +30,12 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "source-map-explorer": "^2.5.3",
     "typescript": "4.3.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
